Updating support to JRE<=18